fix: fix bug with horizontal scroll

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
 
 .circle-light-m {
   display: none;
+  overflow: hidden;
 }
 
 .circle-light,
@@ -190,8 +191,8 @@ body {
 
   .nav-menu {
     position: absolute;
-    top: 87px;
-    right: -500px;
+    top: -100px;
+    right: 0;
     height: 100vh;
     bottom: -100vh;
     opacity: 0;
@@ -204,9 +205,9 @@ body {
 
   .nav-menu.active {
     opacity: 1;
+    top: 87px;
     bottom: 0;
     z-index: 10;
-    right: 0;
   }
 
   .nav-menu__list {
